tests/types/errors/match_missing_variants_two.err
1. error[T050]: non-exhaustive match on union `Shape`: missing variant(s) `Triangle` and `Pentagon`
  --> tests/types/errors/match_missing_variants_two.mochi:12:10

 12 |   return match sh {
    |          ^

help:
  Add an arm for each missing variant or use a wildcard `_` arm to cover the remainder.
